feat: adding in initial traits form

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/f4-startmeup-random"
+POSTGRES_URL="postgresql://postgres:password@localhost:5432/f4-startmeup-random"
 
 # Example:
 # SERVERVAR="foo"
