--- a/package.json
+++ b/package.json
@@ -7,58 +7,62 @@
     "build": "next build",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
+    "db:seed": "dotenv -e .env -- tsx src/server/db/seed.ts",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.3",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@clerk/nextjs": "^5.7.5",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.25.0",
-    "@tanstack/react-table": "^8.16.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@vercel/postgres": "^0.8.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.29.5",
     "lucide-react": "^0.376.0",
-    "next": "^14.2.1",
+    "next": "^14.2.33",
     "next-themes": "^0.3.0",
-    "postgres": "^3.4.3",
+    "postgres": "^3.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.68.0",
     "server-only": "^0.0.1",
-    "sonner": "^1.4.41",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.3.0",
+    "sonner": "^1.7.4",
+    "superjson": "^2.2.6",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "zod": "^3.23.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "@types/eslint": "^8.56.12",
+    "@types/node": "^20.19.25",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "dotenv-cli": "^11.0.0",
+    "drizzle-kit": "^0.20.18",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.33",
     "eslint-plugin-drizzle": "^0.2.3",
-    "pg": "^8.11.3",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "pg": "^8.16.3",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.18",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.32.0"
