--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "db:seed": "dotenv -e .env -- tsx src/server/db/seed.ts",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
@@ -45,24 +48,31 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.19.25",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/ui": "^4.0.15",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.20.18",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.33",
     "eslint-plugin-drizzle": "^0.2.3",
+    "jsdom": "^27.2.0",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   },
   "ct3aMetadata": {
     "initVersion": "7.32.0"
